# blackboard-judge-architecture-demo

./: CLAUDE.md  README.md  agents.json  pyproject.toml
docs/raw/: 00__architecture-critique-by-claude.txt  01__code-critique-by-claude.txt  02__conversations.txt
src/demo/: __init__.py  __main__.py  app.py
tests/: test_app_logic.py
